# AfriChain

./: README.md  pyproject.toml
africhain/: apis.py  main.py  query_db.py
africhain/models/: QueryRequest.py
africhain/tools/: ip.py  pokemon.py  query_db.py  translate_text.py
africhain/utils/: agent.py  get_ip_info.py  get_weather.py  movie.py  replace_md.py  search_internet.py  translate_text.py
