[tool.poetry]
name = "africhain"
version = "0.1.0"
description = ""
authors = ["Theedon <faniyantoyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
langchain = "^0.2.3"
requests = "^2.32.3"
uvicorn = "^0.30.1"


pandas = "^2.2.2"
langchain-community = "^0.2.4"
langchain-openai = "^0.1.8"
markdown = "^3.6"
langchain-huggingface = "^0.0.3"
spacy = "^3.7.5"
langchain-google-genai = "^1.0.6"
langchain-mistralai = "^0.1.8"
langchainhub = "^0.1.18"
langchain-anthropic = "^0.1.15"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
africhain = "africhain.main:main"
