[tool.poetry]
name = "africhain"
version = "0.1.0"
description = ""
authors = ["Theedon <faniyantoyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
langchain = "^0.2.3"
requests = "^2.32.3"
uvicorn = "^0.30.1"


markdown = "^3.6"
langchain-google-genai = "^1.0.6"
langchain-mistralai = "^0.1.8"
langchain-anthropic = "^0.1.15"
google-cloud-translate = "2.0.1"
langchain-community = "^0.2.4"
langchainhub = "^0.1.18"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
africhain = "africhain.main:main"
